--- a/battleship-server/package.json
+++ b/battleship-server/package.json
@@ -1,9 +1,10 @@
 {
   "name": "battleship-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
